--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,600;1,200;1,300;1,400;1,500&family=Lora:ital,wght@0,700;1,400;1,500;1,600&family=Open+Sans:ital,wght@1,300;1,400;1,500&family=Varela+Round&display=swap" rel="stylesheet">
 
     
     <title>BLOG
