--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,600;1,200;1,300;1,400;1,500&family=Lora:ital,wght@0,700;1,400;1,500;1,600&family=Open+Sans:ital,wght@1,300;1,400;1,500&family=Varela+Round&display=swap" rel="stylesheet">
-
-    
+    <link href="/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>BLOG
     </title>
   </head>
