--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,6 +10,12 @@
       content="Web site created using create-react-app"
     />
     <title>Blog</title>
+    <style>
+      .link {
+        text-decoration: none;
+        color: inherit;
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
